registratie pagina toegevoegd

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
         <div class="btn-group">
             <button onclick="location.href='inlog.php'">Inloggen</button>
+            <button onclick="location.href='register.php'">Registreren</button>
             <button onclick="location.href='shop.php'">Bekijk planten</button>
         </div>
     </div>
