--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+---------------------------------------
+Naam script     : index.html
+Omschrijving     : de pagina waar je als eerst komt voordat je bent ingelogd
+Naam ontwikkelaar: sam en semere
+---------------------------------------
+-->
 <!DOCTYPE html>
 <html lang="nl">
 <head>
